Bump `Formatting` submodule and clean up accumulated Javadoc violations (#531)
* Bump `Formatting` submodule and clean up accumulated Javadoc violations

Move the `Formatting` submodule from `28d5cc4` (which was the pin since long before ponder-lab/Formatting#2's `JavadocMethod` tightening landed) to current master `f5f1907`. The bump consumes ponder-lab/Formatting#2 (require `@param`/`@return` on documented methods) plus several other rule additions that have accumulated independently.

Fix the violations the bump surfaces. None are semantic; all are pre-existing Javadoc prose that the older `Formatting` pin had not yet flagged:

- `JavadocParagraph` (`<p>` tag needs a preceding blank Javadoc line): 5 instances in `Parameter.java`, 3 in `Function.java`, 1 in `InputSignature.java`. Insert ` *` between the surrounding prose and the `<p>`.
- `SummaryJavadoc` (first sentence needs ending period): 2 instances in `Util.java`/`Function.java` core (`"function."` → `{@code function} attribute.`; "via three steps:" split into its own summary sentence followed by `<p>Three steps:`), 5 instances in the test file (`tf/function#retracing,` trailing comma → period), and 2 "summary javadoc missing" cases where the first line of the Javadoc was `@return` instead of a summary sentence (added one-line summaries).
- `RegexpSinglelineJava` (no `Boolean.TRUE`/`Boolean.FALSE`): 1 use of `Boolean.TRUE` in the test file → static-imported `TRUE`.
- `LocalVariableName` (camelCase regex): 4 occurrences of `tShapesDtypes` (which violates `^[a-z]([a-z0-9][a-zA-Z0-9]*)?$` because the second character is uppercase `S`) renamed to `tensorShapesDtypes`.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>

* Replace `<p>` tags with blank Javadoc lines; use `List.of(2)` over `Collections.singletonList(2)`

Two follow-ups on review feedback.

**`<p>` → blank Javadoc lines.** The first commit's `<p>` fixes were reverted by Spotless's Eclipse Javadoc formatter, which strips blank lines preceding `<